gist
   Compiling musync v0.1.0 (file:///home/bemeurer/src/musync)
error[E0308]: mismatched types
   --> src/checksum.rs:115:8
    |
115 |     Ok(hasher.result())
    |        ^^^^^^^^^^^^^^^ expected array of 64 elements, found struct `checksum::blake2::<unnamed>::<unnamed>::GenericArray`
    |
    = note: expected type `[u8; 64]`
               found type `checksum::blake2::<unnamed>::<unnamed>::GenericArray<u8, checksum::blake2::<unnamed>::<unnamed>::<unnamed>::UInt<checksum::blake2::<unnamed>::<unnamed>::<unnamed>::UInt<checksum::blake2::<unnamed>::<unnamed>::<unnamed>::UInt<checksum::blake2::<unnamed>::<unnamed>::<unnamed>::UInt<checksum::blake2::<unnamed>::<unnamed>::<unnamed>::UInt<checksum::blake2::<unnamed>::<unnamed>::<unnamed>::UInt<checksum::blake2::<unnamed>::<unnamed>::<unnamed>::UInt<checksum::blake2::<unnamed>::<unnamed>::<unnamed>::UTerm, checksum::blake2::<unnamed>::<unnamed>::<unnamed>::B1>, checksum::blake2::<unnamed>::<unnamed>::<unnamed>::B0>, checksum::blake2::<unnamed>::<unnamed>::<unnamed>::B0>, checksum::blake2::<unnamed>::<unnamed>::<unnamed>::B0>, checksum::blake2::<unnamed>::<unnamed>::<unnamed>::B0>, checksum::blake2::<unnamed>::<unnamed>::<unnamed>::B0>, checksum::blake2::<unnamed>::<unnamed>::<unnamed>::B0>>`

error: aborting due to previous error

error: Could not compile `musync`.

To learn more, run the command again with --verbose.
